resume-emoji.css
* {
  /*outline: 1px solid red;*/

  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;

  font-family: sans-serif;
}

body {
  /* padding: 10px 0px; */
}

header, main, nav, aside, footer {
  flex: 1 100%;
  /*align-content: center;*/
  width: 800px;
  margin: auto;
}

header {
  text-align: center;
}

nav {
  display: flex;
  justify-content: center;
  flex-flow: wrap;
  margin-bottom: -1.5em;
}

nav > address {
  display: flex;
  flex-direction: column;
  justify-content: center;

  font-style: normal;

  width: 200px;
  height: 30px;
}

h1 {
  font-weight: 300;
  margin: .4em;
}

h2 {
  text-align: center;
  font-weight:300;
  margin-top: 2em;
  margin-bottom: -1em;
}

#skills > h2, #interests > h2 {
  font-size: 1.2em;
  margin-bottom: -.5em;
}

#skills {
  /* margin-top: 2.5em; */
}

h3 {
  margin-top: 1.2em;
  margin-bottom: -0.8em;
}

h4 {
  margin-top: .9em;
  margin-bottom: -.6em;
}

h5 {
  font-weight: lighter;
  margin-top: .5em;
  margin-bottom: .5em;
}

.date {
  float: right;
  /* font-weight: 400; */
  font-size: 11pt;
}

/* #education{
  text-align: center;
} */

.subtitle {
  font-size: .9em;
  font-weight: 400;
}

#skills > p, #interests > p {
  margin-top: 1em;
  font-family: monospace;
  text-align: center;
}

ul {
  margin-bottom: -.4em;
  /* font-size: .9em; */
  /* # Custom bullets # */
  list-style: none;
  list-style-position: outside;
  margin-left: 0;
  padding-left: 3em;
  text-indent: -2em;
}

/* Text bullet */
/* li {
  margin-bottom: .2em;
  text-indent: -1em;
} */

/* Emoji bullet */
li {
  /* margin-bottom: 0em;
  text-indent: 1em; */
  margin-bottom: -.2em;
}

li:before {
  content: "+";
  padding-right: 1ch;
}

#lifetime-fitwear li:before {
  content: "🏋️‍";
}
#eloquent-speaking li:before {
  content: "🎤";
}
#uw-retail-services li:before {
  content: "👕";
}
#imprint li:before {
  content: "🗞";
}
#mastered li:before {
  content: "📷";
}
#waterloo li:before {
  content: "🧠";
}

.link {
  margin-top: .2em;
  margin-left: 1.8em;
}

a:link, a:visited {
  color: #26A;
  text-decoration: none;
}

a:hover {
  color: #4AD;
}

hr {
  width: 600px;
  margin-bottom: -1.5em;

  /*Style from CSS-tricks https://css-tricks.com/simple-styles-for-horizontal-rules/*/
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

/* Fix hr spacing */
#experience + hr {
  margin-top: 2em;
}

